Fix alignment

--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -245,6 +245,7 @@
   border-radius: 8px;
   padding: 2px;
   margin: 6px;
+  margin-left: 0;
   border-color: $steligence-gray;
   border-width: thin;
   color: $steligence-orange;
@@ -286,6 +287,7 @@
 .cornerstone-text{
   width: 100%;
   padding: 40px;
+  padding-left: 0;
   font-family: $vagrounded-regular;
 }
 
@@ -1138,7 +1140,7 @@
   }
   .cornerstone-intro {
     font-size: 16px;
-    width: 180px;
+    width: 220px;
     padding-left: 35px;
     line-height: 1.6em;
     margin-top: 35%;
